See #239. Code clean-up after rating btn update. Ready for PR. This commit closes #239.

--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -6,7 +6,7 @@ lpc-directive {
 	width: 100%;
   height: 100%;
   justify-content: space-around;
-	border: 1px solid red;
+	// border: 1px solid red;
 }
 
 // This is the THREEjs element.
@@ -29,11 +29,6 @@ lpc-directive {
 	&.buttons_visible {
 		width: 88%;
 	}
-}
-
-.waveLabel {
-	font-size: 35px;
-	width: 100%;
 }
 
 .lpcCanvasSize-big { // not working
