--- a/staRt/www/common-components/practice-directive/_practice-directive_styles.scss
+++ b/staRt/www/common-components/practice-directive/_practice-directive_styles.scss
@@ -10,7 +10,7 @@
   position: relative;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin-top: $row-h;
   height: $row-h;
   width: 100%;
@@ -21,7 +21,6 @@
     flex-flow: column nowrap;
     justify-content: flex-end;
     margin-left: $col-w * 2;
-    //padding-bottom: 1em;
     align-items: center;
     height: $row-h;
     width: $col-w * 6.5;
