--- a/staRt/www/states/root/resources/_resources_styles.scss
+++ b/staRt/www/states/root/resources/_resources_styles.scss
@@ -86,16 +86,16 @@
 	justify-content: center;
 }
 
-.range-container
-{
+
+.range-container {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: center;
 	align-items: flex-end;
+	width: $col-w * 9;
 }
 
-.range-label
-{
+.range-label {
 	line-height: 100%;
 	font-weight: bold;
 	width: 40px;
@@ -103,32 +103,35 @@
 	padding: 1em 0;
 	font-size: 0.9rem;
 
-	&:first-child
-	{
+	&:first-child {
 		padding-left: 0;
 	}
 }
 
-.resources strong
-{
+.res-reset-button {
+	// this is terrible, but temporary
+	// overwrites reset btn style from lpc-dir
+  top: 9px !important;
+}
+
+.resources strong {
 	display: block;
 	color: $blue-main;
 }
 
-.resources p
-{
+.resources p {
 	margin: 0;
 }
 
 .version-display {
   position: absolute;
-	margin-left: $col-w * 9;
-	margin-top: 1em;
-	z-index: 10;
+	margin-left: $col-w * 2;
+	margin-top: $row-h * 1; //1em;
+	z-index: 99;
 }
 
 .res-lpcBox {
-	width: $col-w * 6;
-	margin-top: $row-h * 0.25;
-	// border: 1px solid red;
+	width: $col-w * 9;
+	margin-top: ($row-h * 0.25) auto;
+	//border: 1px solid red;
 }
