--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -9,6 +9,11 @@ lpc-directive {
 	// border: 1px solid red;
 }
 
+.lpc-contentBox {
+  width: 100%;
+  height: 100%;
+}
+
 // This is the THREEjs element.
 // Its H & W should be determined by its parent ele.
 #lpc-canvas {
