--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1253,10 +1253,11 @@ div.needleBox {
     height: 100%;
     z-index: 1; }
     .resources-layout_view-container .resources-layout_bg-container .res-temp-img-pos {
+      position: fixed;
       background-color: #c2f2f2;
       width: 100%;
       height: 100%;
-      z-index: 1; }
+      z-index: 1 !important; }
       .resources-layout_view-container .resources-layout_bg-container .res-temp-img-pos .img-bg_res {
         top: 18px;
         width: 100%;
@@ -1294,10 +1295,11 @@ div.needleBox {
   font-weight: 500;
   text-align: right;
   color: #7ab5b8;
-  z-index: 10; }
+  z-index: 99; }
 
 .res-important {
-  font-weight: 700; }
+  font-weight: 700;
+  z-index: 99; }
 
 .res-sect {
   display: flex;
