--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1542,32 +1542,18 @@ lpc-directive {
   width: 100.3%;
   background-color: #FFC95F; }
 
-.coinBox-layout {
-  text-align: left;
-  margin: auto;
-  margin-top: -400px; }
-
-.coin_stack {
-  display: inline-block;
-  position: relative;
-  height: 80px;
-  width: 33px;
-  margin: 0 4px -21px 4px; }
-
-img.coin {
-  position: absolute; }
-
 .practice-directive-container {
   height: 100%; }
 
 .promptBox-layout {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-start;
   margin-top: 16.66667vh;
   height: 16.66667vh;
-  width: 100%; }
+  width: 100%;
+  border: 1px solid tan; }
   .promptBox-layout .promptBox {
     display: flex;
     flex-flow: column nowrap;
@@ -1588,3 +1574,24 @@ img.coin {
 .words-progress-indicator {
   display: inline-block;
   vertical-align: middle; }
+
+.coin-row-layout {
+  position: absolute;
+  top: 83.33333vh;
+  left: 25vw;
+  width: 58.33333vw;
+  height: 13.33333vh; }
+
+.coinBox-layout {
+  text-align: left;
+  margin: auto; }
+
+.coin_stack {
+  display: inline-block;
+  position: relative;
+  height: 80px;
+  width: 33px;
+  margin: 0 4px -21px 4px; }
+
+img.coin {
+  position: absolute; }
