See #236. Seems to fix the coin row issue.

--- a/staRt/www/common-components/practice-directive/_practice-directive_styles.scss
+++ b/staRt/www/common-components/practice-directive/_practice-directive_styles.scss
@@ -15,7 +15,7 @@
   margin-top: $row-h;
   height: $row-h;
   width: 100%;
-  border: 1px solid tan;
+  // border: 1px solid tan;
 
    .promptBox {
     display: flex;
