--- a/staRt/www/states/root/resources/_resources_styles.scss
+++ b/staRt/www/states/root/resources/_resources_styles.scss
@@ -49,10 +49,13 @@
 
 // ================================================
 // STATE > PAGE STYLES
-// ================================================
 // container for page-level content
 // purpose: selector for indiv page content
-.res-index-page {
+// ================================================
+
+// ----------------------------------
+// resources index page
+.res-page-index {
 	position: relative;
 	display: flex;
 	flex-flow: column nowrap;
@@ -83,7 +86,6 @@
 	z-index: 99;
 	// color: $c-text-main;
 }
-
 
 .res-sect {
   display: flex;
@@ -157,55 +159,24 @@
 	}
 } // end res-sect
 
+// end of resources index page
+// ----------------------------------
 
-
-
-
-// -------------------------------------
-.resources-links-container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-}
-
-.resources-links-container .button {
-	width: 120px;
-	height: 100px;
-	margin-left: 20px;
-	margin-right: 20px;
-	margin-bottom: 20px;
-	line-height: 20px;
-}
-
-.resources-links-container .adjust-profile {
-	position: absolute;
-	right: 0px;
-	height: 60px;
-}
-
-.resources-links-container .questionnaire {
-	font-size: 12px;
-}
-
-.resources-links-container h3 {
-	width: 100%;
-	margin-bottom: 0px;
-	font-weight: bold;
-	color: $blue-main;
-}
-
-.resources-links-container h4 {
-	width: 100%;
-}
-
-.resources-links-row {
-	display: flex;
-	width: 80%;
-	justify-content: center;
-}
 
 
 // ------------------------------
+// resources adjust LPC page
+.resources .back-btn {
+	background: #d3d3d3;
+	color: #808080;
+	position: relative;
+	top: $row-h * -0.25;
+	float: right;
+	height: auto;
+	width: 64px;
+	padding: 10px;
+	z-index: 100000;
+}
 
 .range-container
 {
@@ -239,10 +210,20 @@
 	margin: 0;
 }
 
-
-
 .res-lpcBox {
-	width: $col-w * 6;
+	width: $col-w * 9;
+	height: $row-h * 3;
 	margin-top: $row-h * 0.25;
-	// border: 1px solid red;
+}
+
+.resources .lpc-container {
+	height: $row-h * 3;
+	width: $col-w * 9;
+	//border: 1px solid lime;
+}
+
+.resources #lpc-canvas-parentSize {
+	width: $col-w * 8.65;
+	// left: $col-w * 0.1;
+	height: $row-h * 2.5;
 }
