--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -17,11 +17,11 @@ lpc-directive {
 // This is the THREEjs element.
 // Its H & W should be determined by its parent ele.
 #lpc-canvas {
-	margin: auto;
-
-	width: 100%; //conflict
-	height: 100%; //conflict
-	z-index: 10; //conflict
+	// margin: auto;
+	//
+	// width: 100%; //conflict
+	// height: 100%; //conflict
+	// z-index: 10; //conflict
 }
 
 #lpc-canvas-parentSize {
@@ -32,12 +32,14 @@ lpc-directive {
 	align-items: center;
 
 	&.buttons_visible {
-    width: 88%;
+    //width: 88%;
 
     &.beachpost-aligned {
-      left: 20vh;
-      bottom: 10vh;
-      width: 83vh;
+			height: 100%;
+			width: 100%;
+      // left: 20vh;
+      // bottom: 10vh;
+      // width: 83vh;
     }
   }
 }
@@ -61,7 +63,7 @@ lpc-directive {
   width: 100%;
 	height: 460px;
 	margin: 0;
-	padding: 0;
+	// padding: 0;
 	border-radius: 4px;
 	display: block;
 	background-color: #F0F9FC;
@@ -73,22 +75,30 @@ lpc-directive {
     background-color: transparent;
     border: none;
     box-shadow: none;
+		top: $row-h * 2.5;
+		left: $col-w * 2;
+		width: $col-w * 7;
+		height: $row-h * 2.5;
+		//border: 1px solid blue;
   }
 
 }
 
-.slider-and-canvas {
-	display: inline-block;
-	width: 88%;
-	height: 88%;
-	margin-top: 4%;
-	position: absolute;
-	left: 0;
 
-	&.full-width
-	{
-		width: 100%;
-  }
+
+
+.slider-and-canvas {
+	// display: inline-block;
+	// width: 88%;
+	// height: 88%;
+	// margin-top: 4%;
+	// position: absolute;
+	// left: 0;
+	//
+	// &.full-width
+	// {
+	// 	width: 100%;
+  // }
 }
 
 .lpc-buttons {
