--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1416,24 +1416,15 @@ lpc-directive {
   width: 100%;
   height: 100%; }
 
-#lpc-canvas {
-  margin: auto;
-  width: 100%;
-  height: 100%;
-  z-index: 10; }
-
 #lpc-canvas-parentSize {
   z-index: 10;
   width: 100%;
   height: 88%;
   display: flex;
   align-items: center; }
-  #lpc-canvas-parentSize.buttons_visible {
-    width: 88%; }
-    #lpc-canvas-parentSize.buttons_visible.beachpost-aligned {
-      left: 20vh;
-      bottom: 10vh;
-      width: 83vh; }
+  #lpc-canvas-parentSize.buttons_visible.beachpost-aligned {
+    height: 100%;
+    width: 100%; }
 
 .lpc-container {
   /* This is the light blue box*/
@@ -1441,7 +1432,6 @@ lpc-directive {
   width: 100%;
   height: 460px;
   margin: 0;
-  padding: 0;
   border-radius: 4px;
   display: block;
   background-color: #F0F9FC;
@@ -1451,17 +1441,11 @@ lpc-directive {
   .lpc-container.transparent-background {
     background-color: transparent;
     border: none;
-    box-shadow: none; }
-
-.slider-and-canvas {
-  display: inline-block;
-  width: 88%;
-  height: 88%;
-  margin-top: 4%;
-  position: absolute;
-  left: 0; }
-  .slider-and-canvas.full-width {
-    width: 100%; }
+    box-shadow: none;
+    top: 41.66667vh;
+    left: 16.66667vw;
+    width: 58.33333vw;
+    height: 41.66667vh; }
 
 .lpc-buttons {
   display: inline-block;
@@ -1609,26 +1593,11 @@ lpc-directive {
   width: 100.3%;
   background-color: #FFC95F; }
 
-.coinBox-layout {
-  text-align: left;
-  margin: auto;
-  margin-top: -400px; }
-
-.coin_stack {
-  display: inline-block;
-  position: relative;
-  height: 80px;
-  width: 33px;
-  margin: 0 4px -21px 4px; }
-
-img.coin {
-  position: absolute; }
-
 .practice-directive-container {
   height: 100%; }
 
 .promptBox-layout {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
@@ -1658,3 +1627,24 @@ img.coin {
 .words-progress-indicator {
   display: inline-block;
   vertical-align: middle; }
+
+.coin-row-layout {
+  position: absolute;
+  top: 83.33333vh;
+  left: 25vw;
+  width: 58.33333vw;
+  height: 13.33333vh; }
+
+.coinBox-layout {
+  text-align: left;
+  margin: auto; }
+
+.coin_stack {
+  display: inline-block;
+  position: relative;
+  height: 80px;
+  width: 33px;
+  margin: 0 4px -21px 4px; }
+
+img.coin {
+  position: absolute; }
