img update to final slide.

--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -996,7 +996,7 @@ div.sandbar-coinImgBox {
   margin-top: 2.75em; }
 
 .p05s5img {
-  padding: 15px; }
+  padding-top: 10px; }
 
 div.needleBox {
   position: relative;
