--- a/staRt/www/states/root/tutorial/partialStyles/_noWave.scss
+++ b/staRt/www/states/root/tutorial/partialStyles/_noWave.scss
@@ -35,8 +35,9 @@
 
 
 		.noWave3 {
-			border: 1px solid green;
-			width: 50%;
+			//border: 1px solid green;
+			padding-top: 0.5em;
+			width: 70%;
 		}
 	} //end .noWaveRow
 
