began restructuring profiles view

--- a/staRt/www/common-styles/_variables.scss
+++ b/staRt/www/common-styles/_variables.scss
@@ -18,6 +18,10 @@ $c-silver-500: #f0f9fc; // main silver
 $c-bronze-400: #f7c8a1;
 $c-bronze-500: #efbd88; // main bronze
 
+// profiles
+$c-lightBlue: #ace2e5;
+
+
 
 
 // OLD COLORS -------------------------------
