--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -677,10 +677,30 @@ input, textarea {
 
 .profiles-card {
   display: flex;
+  flex-flow: column nowrap;
   background-color: #ffffff;
   width: 100%;
   height: 75vh;
+  padding: 2em 0;
   border-radius: 10px; }
+
+.card-head .card-headBox {
+  display: flex;
+  flex-direction: row nowrap; }
+
+.card-navBox {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  height: auto;
+  width: 100%;
+  border-top: 2px solid #ace2e5;
+  border-bottom: 2px solid #ace2e5; }
+  .card-navBox .pro_navitem {
+    padding: 0.5em 0;
+    color: #3D6D84;
+    font-size: 0.9em;
+    font-weight: 400; }
 
 p.display-name {
   margin-bottom: 0px;
